service location, cleanups, updates and fixes
- ADD: DelegateServiceLocator can handle fallback logic now
- UPD: delegates of DelegateServiceLocator class
- FIX: ApplicationServer and WpfAuctionDesigner projects
- CHG: code cleanups
- FIX: typos and documentation fixes

--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,4 @@ MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono.user
 /MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2.Web/bin
 /MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4.Web/obj
 /MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4.Web/bin
+Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner.csproj.user
