hlpers, proxies, DragNBatch and SandBox
- ADD: general SandBox project
- ADD: helper classes for building proxy objects for interfaces
- ADD: Skip() collection helper method
- ADD: IPlugInContext is also defined as service locator now
- CHG: code cleanups and improvements

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,6 @@ MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono.user
 /MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4.Web/obj
 /MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4.Web/bin
 Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner.csproj.user
+Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox.v12.suo
+/Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox/obj
+/Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox/bin
