DragNBatch, application, debugging, ForEach, collections, fixes, cleanups and improvements
- ADD: synchronized lists and dictionaries are serializable now
- ADD: started to make use of DebuggerDisplayAttribute
- ADD: ForEach() helper and extension methods
- CHG: action parameter of IGeneralList.ForEach()
- CHG: actionStateFactories structure for ForAll()/ForAllAsync() methods
- CHG: code cleanups and improvements
- ADD: Index property for IForAllItemExecutionContext<T> interface
- FIX: minor fixes
- ADD: SynchronizedDictionary can handle custom key comparer now
- ADD: Vars property to TMApplication class
- ADD: can select DragNBatch plugin now

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Collections\GeneralList.Interface.cs">
       <DependentUpon>GeneralList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Collections\Generic\IForEachItemExecutionContext.cs" />
+    <Compile Include="Collections\Generic\SimpleForEachItemExecutionContext.cs" />
     <Compile Include="Collections\Generic\SynchronizedDictionary.cs" />
     <Compile Include="Collections\Generic\SynchronizedDictionary.Interface.cs">
       <DependentUpon>SynchronizedDictionary.cs</DependentUpon>
@@ -170,6 +172,9 @@
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CollectionHelper.ForAllAsync.Impl.cs">
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\CollectionHelper.ForEach.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CollectionHelper.IndexOf.cs">
